# sscid

./: .gitattributes  .gitignore  .sscid.sh.kate-swp  MANIFEST.in  Makefile  README.md  payload.json  setup.cfg  setup.py  sscid-tp.sh  sscid.sh  telepresence-ci.sh  test.sh  tox.ini
requirements/: main.txt
sscid/: _version.py  sscid.py
